# PDBinTerminal

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LineinTerminal.cpp  Makefile  PDBinTerminal.cpp  README.md  TerminalPDB  cmake_install.cmake  data.h  dot_movement  dot_movement.cpp  lib.h  line_movement  line_movement.cpp  line_movement2  line_movement2.cpp  line_movement3  line_movement3.cpp  line_movement4  line_movement4.cpp  line_movement_rotation.cpp  line_zoom  line_zoom.cpp  line_zoom2  line_zoom2.cpp  main.cpp  main_print.cpp  parameter.h  readPDB.cpp  readPDB2.cpp  test_viewer.h  viewer.h  visualization.cpp
example/: 1l2y.pdb1  1mh1.cif  1mh1_no_ss.cif  1shg.pdb1  2m7c.cif  2m7c.pdb1  4EX8.pdb1  4EX8_no_ss.pdb1  8K06.pdb1  8yac.cif  ufile  utfile  utfile1  utfile3  utfile_ex
jingi/gpt_screen/: a.out  screen.cpp  screen_multiple_lines.cpp
jingi/pdb_terminal/: file_reader.cpp
jingi/screen/: a.out  point_move.cpp
lib/: CMakeLists.txt
lib/lodepng/: lodepng.cpp  lodepng.hpp
lib/simd/: simd.h
pdb_terminal/: a.out
src/: Atom.hpp  CMakeLists.txt  Makefile  Protein.cpp  Protein.hpp  Screen.hpp  cmake_install.cmake  loop.cpp  loop.hpp
src/commons/: CMakeLists.txt  util.cpp
src/structure/: Atom.cpp  Atom.hpp  CMakeLists.txt  Makefile  Parameters.cpp  Parameters.hpp  Protein.cpp  Protein.hpp  SSPredictor.cpp  SSPredictor.hpp  Structure.cpp  Structure.h  StructureMaker.cpp  StructureMaker.hpp  cmake_install.cmake
src/visualization/: CMakeLists.txt  Camera.cpp  Camera.hpp  Makefile  PDBLoader.cpp  PDBLoader.hpp  Palette.hpp  Panel.cpp  Panel.hpp  RenderPoint.hpp  Screen.cpp  Screen.hpp  cmake_install.cmake  init.cpp  init.hpp  loop.cpp  loop.hpp
